main-menu (1.20) UNRELEASED; urgency=low

  * Remove rather redundant extended description of main menu question.
    The title contains the same information.

 -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2007 04:15:59 -0400

main-menu (1.19) unstable; urgency=low

  [ Colin Watson ]
  * Avoid suppressing menu items that have never been seen before just
    because they have a lower menu item number than the last successful item
    (closes: #288053).
  * Restore previous default priority when selecting a menu item (other than
    neverdefault items) immediately after backing up to the main menu.

  [ Joey Hess ]
  * Increase NEVERDEFAULT to 90000.

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:25:07 -0400

main-menu (1.18) unstable; urgency=low

  [ Updated translations ]
  * Finnish (fi.po) by Tapio Lehtonen
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A

 -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 16:54:34 +0100

main-menu (1.17) unstable; urgency=low

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Wed, 31 Jan 2007 11:46:37 +0100

main-menu (1.16) unstable; urgency=low

  * show_main_menu: free menu variable after use. Closes: #405774.
    Thanks to Masami Ichikawa who spotted the error.
  * Add myself to uploaders.

  [ Updated translations ]
  * Arabic (ar.po) by Ossama M. Khayat
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bosnian (bs.po) by Safir Secerovic
  * Danish (da.po) by Claus Hindsgaul
  * Georgian (ka.po) by Aiet Kolkhi
  * Kurdish (ku.po) by Amed Çeko Jiyan
  * Latvian (lv.po) by Aigars Mahinovs
  * Malayalam (ml.po) by Praveen A
  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
  * Panjabi (pa.po) by A S Alam