@@ -2,8 +2,10 @@ main-menu (1.20) UNRELEASED; urgency=low
 
   * Remove rather redundant extended description of main menu question.
     The title contains the same information.
+  * Reset debconf title when displaying a failure message, otherwise the title
+    could be left set to a previous value.
 
- -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2007 04:15:59 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2007 18:43:36 -0400
 
 main-menu (1.19) unstable; urgency=low
 
